<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_1"
    tools:context=".PemilikKos.UploadKos">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rectangle_4_shape"
        >

        <ImageView
            android:id="@+id/back_to_beranda"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/tambah_kos_logo"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/tambah_kos_logo"
            android:layout_toEndOf="@+id/back_to_beranda">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/archivo_black"
                android:text="@string/tambah_kos"
                android:textSize="28sp" />

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintHeight_default="wrap">

        <LinearLayout
            android:id="@+id/mid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:elevation="4dp"
                android:background="@drawable/rectangle_2_shape"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:paddingHorizontal="10dp"
                    android:text="@string/nama_kos"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_2_shape"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="text"
                    android:elevation="4dp"
                    android:paddingHorizontal="10dp"
                    android:hint="@string/isi_nama_kos_anda" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:paddingHorizontal="10dp"
                    android:text="@string/deskripsi_kos"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_2_shape"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="textMultiLine"
                    android:elevation="4dp"
                    android:paddingHorizontal="10dp"
                    android:hint="@string/isi_deskripsi_kos_anda" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                >

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:background="@drawable/radio_selector"
                        android:button="@drawable/null_radio_button"
                        android:elevation="4dp"
                        android:layout_gravity="center"
                        android:textColor="@drawable/radio_txt_selector"
                        android:paddingHorizontal="10dp"
                        android:text="@string/putra"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/radio_selector"
                        android:button="@drawable/null_radio_button"
                        android:elevation="4dp"
                        android:layout_gravity="center"
                        android:textColor="@drawable/radio_txt_selector"
                        android:paddingHorizontal="10dp"
                        android:text="@string/putri"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_selector"
                        android:button="@drawable/null_radio_button"
                        android:elevation="4dp"
                        android:layout_gravity="center"
                        android:textColor="@drawable/radio_txt_selector"
                        android:fontFamily="@font/inter_regular"
                        android:paddingHorizontal="10dp"
                        android:text="@string/campur"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alamat Kos"
                    android:fontFamily="@font/inter_regular"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/inter_extralight"
                    android:text="@string/buka_peta_dan_posisikan" />

                <Button
                    android:layout_width="220dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_buka_peta_background"
                    android:text="@string/buka_peta"
                    android:textColor="#00FF29"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Catatan Alamat"
                        android:fontFamily="@font/inter_regular"
                        android:layout_marginTop="5dp"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/rectangle_2_shape"
                        android:fontFamily="@font/inter_regular"
                        android:inputType="textMultiLine"
                        android:elevation="4dp"
                        android:paddingHorizontal="10dp"
                        android:hint="@string/isi_deskripsi_kos_anda" />

                </LinearLayout>
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:paddingHorizontal="10dp"
                    android:text="Ketersediaan Kamar"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_2_shape"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="textMultiLine"
                    android:elevation="4dp"
                    android:paddingHorizontal="10dp"
                    android:hint="@string/atur_jumlah_kamar_yang_tersedia" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:paddingHorizontal="10dp"
                    android:text="Fasilitas"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_2_shape"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="textMultiLine"
                    android:elevation="4dp"
                    android:paddingHorizontal="10dp"
                    android:hint="atur fasilitas kos anda" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:paddingHorizontal="10dp"
                    android:text="Harga"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_2_shape"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="number"
                    android:elevation="4dp"
                    android:paddingHorizontal="10dp"
                    android:hint="atur harga kos anda" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rectangle_4_shape"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="100dp"
            android:text="@string/tambahkan" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>